Button on small screens fixed

--- a/app/assets/stylesheets/_fonts.scss
+++ b/app/assets/stylesheets/_fonts.scss
@@ -27,7 +27,11 @@ h1 {
 
 a {
   color: $default-link-color;
-  font-size: 1.2em;
+  font-size: 1em;
   text-decoration: none;
   text-shadow: -1px -1px #aa3030;
+
+  @include breakpoint($small) {
+    font-size: 1.2em;
+  }
 }
