--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -182,7 +182,7 @@ h1 {
 
 a {
 	color: #fff;
-	font-size: 1.2em;
+	font-size: 1em;
 	text-decoration: none;
 	text-shadow: -1px -1px #aa3030;
 }
@@ -231,6 +231,10 @@ body {
 
 h1 {
 	font-size: 2.7em;
+}
+
+a {
+	font-size: 1.2em;
 }
 
 #page {
